--- a/py/HTMLPage1.html
+++ b/py/HTMLPage1.html
@@ -1,9 +1,6 @@
 ﻿<html>
 <body>
     <tilte>qufan tech</tilte>
-    <h1>dskgjksdgyjerijgvierjtgoerjgoertjworjyitjyjtiukngknbjdsjbfubhfihgh</h1>
-    <h2>dmfjgkorjkgktrgltrkohkyotkuoktyokuioikpopukpuopkipuopykupokpiopuikipu</h2>
-    <p></p>
-    <p1></p1>
+    <h1>dskgjksdgyjerijgvierjtgoerjgoertjworjyitjyjtiukngknbjdsjbfubhfihgh</h1><h2>dmfjgkorjkgktrgltrkohkyotkuoktyokuioikpopukpuopkipuopykupokpiopuikipu</h2>
     </body>
 </html>
